other/require-container-port-names/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    ports:
    - name: http-port
      containerPort: 80
  - name: busybox02
    image: busybox:1.35
    ports:
    - containerPort: 80
    - containerPort: 443
      name: https-port
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    ports:
    - containerPort: 80
  - name: busybox02
    image: busybox:1.35
    ports:
    - containerPort: 80
      name: http-port
    - containerPort: 443
      name: https-port
